--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,5 @@ RoxygenNote: 6.0.1
 Depends:
     R (>= 2.10)
 Suggests: testthat
+URL: https://github.com/melaniehorn/RobRegTest
+BugReports: https://github.com/melaniehorn/RobRegTest/issues
