adding simplified k sign depth

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(depth.test,formula)
 S3method(sign.test,default)
 S3method(sign.test,formula)
 export(calcDepth)
+export(calcSimpDepth)
 export(ddepth)
 export(depth.test)
 export(f.test)
