try to fix the package - again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,4 +21,4 @@ import(nsga2R)
 import(stats)
 importFrom(Rcpp,sourceCpp)
 importFrom(utils,capture.output)
-useDynLib(RobRegTest, .registration = TRUE)
+useDynLib(GSignTest, .registration = TRUE)
