Adding asymptotical version of the sign depth again

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(depth.test,formula)
 S3method(sign.test,default)
 S3method(sign.test,formula)
 export(calcDepth)
+export(calcDepth_asymp)
+export(calcDepth_old)
 export(calcSimpDepth)
 export(ddepth)
 export(depth.test)
